scrolbar and overflow-y solved

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@
 }
 
 #mapPost {
-  height: 200px;
+  height: 150px;
   width: 300px;
   border-radius: 10px;
 }
